# fifa_player

./: 01_decision_tree.py  02_random_forest.py  03_gradient_boosting.py  README.md  pyproject.toml
src/: preprocessing.py
