[tool.poetry]
name = "fifa_player"
version = "0.1.0"
description = ""
authors = ["Nikos Mertens <nikos@nikos-mertens.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
seaborn = "^0.11.2"
scikit-learn = "^1.1.0"
graphviz = "^0.20"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
